WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
76316
Delay updating the root compositing layer if the layer tree state is frozen
https://bugs.webkit.org/show_bug.cgi?id=76316
Summary
Delay updating the root compositing layer if the layer tree state is frozen
Anders Carlsson
Reported
2012-01-13 15:15:34 PST
Delay updating the root compositing layer if the layer tree state is frozen
Attachments
Patch
(4.23 KB, patch)
2012-01-13 15:50 PST
,
Anders Carlsson
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2012-01-13 15:50:58 PST
Created
attachment 122512
[details]
Patch
Anders Carlsson
Comment 2
2012-01-13 16:09:22 PST
Committed
r105008
: <
http://trac.webkit.org/changeset/105008
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug