Delay updating the root compositing layer if the layer tree state is frozen https://bugs.webkit.org/show_bug.cgi?id=76316

Reviewed by Dan Bernstein.

When the layer tree is frozen, stash the root layer in m_pendingRootCompositingLayer and set it in flushLayers.

* WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.h:
* WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.mm:
(WebKit::TiledCoreAnimationDrawingArea::setRootCompositingLayer):
(WebKit::TiledCoreAnimationDrawingArea::flushLayers):

Canonical link: https://commits.webkit.org/93143@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105008 268f45cc-cd09-0410-ab3c-d52691b4dbfc