Source/WebKit2/WebProcess/mac/SecItemShimMethods.mm
@@ -105,6 +105,7 @@ static OSStatus webSecItemDelete(CFDictionaryRef query)
 
 void initializeSecItemShim()
 {
+    return;
     const WebProcessSecItemShimCallbacks callbacks = {
         webSecItemCopyMatching,
         webSecItemAdd,
